--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.3",
     "react-slick": "^0.30.2",
+    "react-sparklines": "^1.7.0",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.3.1",
     "swiper": "^11.1.0",
